--- a/src/app/features/order/order-view/order-view.component.css
+++ b/src/app/features/order/order-view/order-view.component.css
@@ -1,12 +1,15 @@
 .order-view {
   display: flex;
   justify-content: center;
-  margin: 20px;
+  padding: 20px;
 }
 
-mat-card {
+.order-card {
+  max-width: 600px;
   width: 100%;
   padding: 20px;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+  border-radius: 8px;
 }
 
 .order-details {
@@ -17,26 +20,17 @@ mat-card {
 .row {
   display: flex;
   justify-content: space-between;
-  margin-bottom: 16px;
+  margin-bottom: 5px;
 }
 
 .col {
   flex: 1;
-  margin-right: 20px;
+  margin-right: 5px;
+  margin-bottom: 5px;
 }
 
 .col:last-child {
   margin-right: 0;
-}
-
-mat-card-title {
-  font-size: 1.5rem;
-  margin-bottom: 16px;
-}
-
-mat-card-actions {
-  display: flex;
-  justify-content: flex-end;
 }
 
 .fix-text {
@@ -44,7 +38,28 @@ mat-card-actions {
   word-break: break-all !important;
 }
 
-#backButton, #downloadButton, #updateButton {
+p {
+  padding: 0 !important;
+  margin: 0 !important;
+}
+
+mat-card-title.title {
+  font-size: 1.8rem;
+  font-weight: bold;
+  text-align: center;
+  margin-bottom: 24px;
+}
+
+mat-card-actions {
+  display: flex;
+  justify-content: space-between;
+  padding: 16px 0;
+}
+
+#backButton,
+#downloadButton,
+#updateButton,
+#deleteButton {
   margin-right: 10px;
 }
 
@@ -60,20 +75,40 @@ mat-card-actions {
   }
 
   .hide-text-on-small mat-icon {
-    margin: 0; 
+    margin: 0;
+  }
+
+  .order-card {
+    padding: 16px;
   }
 }
 
-
-@media (max-width: 600px) {
+@media (max-width: 640px) {
   .row {
     flex-direction: column;
   }
+
   .col {
     margin-right: 0;
-    margin-bottom: 16px;
+    margin-bottom: 5px;
   }
+
   .col:last-child {
     margin-bottom: 0;
+  }
+
+  #backButton,
+  #downloadButton,
+  #updateButton,
+  #deleteButton {
+    margin-right: 0;
+    margin-bottom: 10px;
+  }
+}
+
+@media (max-width: 430px) {
+  mat-card-actions {
+    flex-direction: column;
+    align-items: flex-start;
   }
 }
