--- a/src/app/features/customer/customer-add/customer-add.component.html
+++ b/src/app/features/customer/customer-add/customer-add.component.html
@@ -1,6 +1,6 @@
 <div class="content">
     <h6 mat-dialog-title>Add New Customer</h6>
-    <div mat-dialog-content class="dialog-content">
+    <div mat-dialog-content class="dialog-content scrollable-content">
         <form [formGroup]="customerForm" (ngSubmit)="onSubmit()">
             <mat-form-field appearance="fill">
                 <mat-label>Name</mat-label>
@@ -22,6 +22,11 @@
             <div class="file-upload">
                 <label for="file" class="file-upload-label">Upload Image</label>
                 <input id="file" type="file" class="file-upload-input" (change)="onFileSelected($event)">
+            </div>
+            <!-- Preview Section (Only display if a file is selected) -->
+            <div class="image-preview" *ngIf="previewUrl">
+                <h6>Image Preview:</h6>
+                <img [src]="previewUrl" alt="Image Preview" class="preview-img" />
             </div>
         </form>
     </div>
