--- a/src/app/features/item/item-list/item-list.component.html
+++ b/src/app/features/item/item-list/item-list.component.html
@@ -43,7 +43,12 @@
                 <!-- Is Available Column -->
                 <ng-container matColumnDef="isAvailable">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header> Is Available </th>
-                    <td mat-cell *matCellDef="let item"> {{item.isAvailable}} </td>
+                    <!-- <td mat-cell *matCellDef="let item"> {{item.isAvailable}} </td> -->
+                    <td mat-cell *matCellDef="let item">
+                        <span class="status-badge" [ngClass]="item.isAvailable ? 'available' : 'unavailable'">
+                            {{ item.isAvailable ? 'Yes' : 'No' }}
+                        </span>
+                    </td>
                 </ng-container>
 
                 <!-- Last Restock Date Column -->
