--- a/src/app/features/item/item-view/item-view.component.html
+++ b/src/app/features/item/item-view/item-view.component.html
@@ -1,6 +1,6 @@
-<div *ngIf="item" class="item-view">
-    <mat-card>
-        <mat-card-title>Item Details</mat-card-title>
+<div *ngIf="item$ | async as item" class="item-view">
+    <mat-card class="item-card">
+        <mat-card-title class="title">Item Details</mat-card-title>
         <mat-card-content>
             <div class="item-details">
                 <div class="row">
@@ -24,24 +24,24 @@
                         <p><strong>Price:</strong> IDR {{ item.price }}</p>
                     </div>
                     <div class="col">
-                        <p><strong>Is Available:</strong> {{ item.isAvailable }}</p>
+                        <p><strong>Is Available:</strong> {{ item.isAvailable ? 'Yes' : 'No' }}</p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col">
+                        <p><strong>Last Restock:</strong> {{ item.lastReStock | date: 'shortDate' }}</p>
                     </div>
                 </div>
             </div>
         </mat-card-content>
         <mat-card-actions>
-            <!-- Back Button with arrow_back icon -->
             <button class="hide-text-on-small" id="backButton" mat-raised-button color="primary" (click)="goBack()">
                 <mat-icon>arrow_back</mat-icon> <span>Back</span>
             </button>
-
-            <!-- Edit Button with edit icon -->
             <button class="hide-text-on-small" id="editButton" mat-raised-button color="accent"
                 (click)="editItem(item.itemsId)">
                 <mat-icon>edit</mat-icon> <span>Update Item</span>
             </button>
-
-            <!-- Delete Button with delete icon -->
             <button class="hide-text-on-small" id="deleteButton" mat-raised-button color="warn"
                 (click)="confirmDeleteItem(item.itemsId)">
                 <mat-icon>delete</mat-icon> <span>Delete Item</span>
