--- a/src/app/features/item/item-list/item-list.component.html
+++ b/src/app/features/item/item-list/item-list.component.html
@@ -9,6 +9,9 @@
             </mat-card-actions>
         </mat-card-header>
         <mat-card-content>
+            <div class="search-container">
+                <input type="text" placeholder="Enter item name" (keyup)="applyFilter($event)" class="search-input">
+            </div>
             <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8 responsive-table tableItem">
                 <!-- ID Column -->
                 <ng-container matColumnDef="itemsId">
